--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-
 .react-flow {
   margin-left: 20px;
+}
+
+.modebar{
+  display: none !important;
 }
